--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "poidh-bot-dashboard",
+  "name": "socially-bot-dashboard",
   "private": true,
   "version": "0.1.0",
   "type": "module",
