Socially: POIDH indexer integration, hardened worker, dashboard metrics, evidence package

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,14 @@ POLLING_INTERVAL=60000
 MIN_WIN_THRESHOLD=70
 
 # ============================================
+# OPTIONAL: POIDH Indexer (real POIDH bounty/claim ingestion)
+# ============================================
+# Set these to enable fetching real bounties/claims via the POIDH Indexer REST API.
+POIDH_INDEXER_BASE_URL=
+POIDH_CHAIN_ID=
+POIDH_BOUNTY_ID=
+
+# ============================================
 # OPTIONAL: Logging
 # ============================================
 # Log level: DEBUG | INFO | WARN | ERROR
