--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node src/main.js",
     "dev": "node --watch src/main.js",
-    "test": "node --test tests/*.test.js",
+    "test": "node --test tests",
     "setup": "node scripts/setup.js",
     "check-balance": "node scripts/check-balance.js",
     "worker": "node worker_server.js",
