Hybrid: add EVM/POIDH + IPFS modules behind env flags

--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,27 @@ POIDH_CHAIN_ID=
 POIDH_BOUNTY_ID=
 
 # ============================================
+# OPTIONAL: Hybrid POIDH execution mode
+# ============================================
+# indexer (default): read bounties/claims via POIDH Indexer REST API
+# evm: interact directly with POIDH EVM contracts (Base/Arbitrum/Degen)
+POIDH_MODE=indexer
+
+# ============================================
+# OPTIONAL: EVM / POIDH Contracts (only if POIDH_MODE=evm)
+# ============================================
+EVM_NETWORK=base
+EVM_RPC_URL=
+EVM_PRIVATE_KEY=
+POIDH_EVM_CONTRACT_ADDRESS=
+
+# ============================================
+# OPTIONAL: IPFS (Pinata)
+# ============================================
+PINATA_API_KEY=
+PINATA_SECRET_KEY=
+
+# ============================================
 # OPTIONAL: Logging
 # ============================================
 # Log level: DEBUG | INFO | WARN | ERROR
