EVM mode: accept POIDH claim on Base Sepolia

--- a/.env.example
+++ b/.env.example
@@ -51,7 +51,7 @@ POIDH_MODE=indexer
 # ============================================
 # OPTIONAL: EVM / POIDH Contracts (only if POIDH_MODE=evm)
 # ============================================
-EVM_NETWORK=base
+EVM_NETWORK=base-sepolia
 EVM_RPC_URL=
 EVM_PRIVATE_KEY=
 POIDH_EVM_CONTRACT_ADDRESS=
