Strict EVM migration: remove Solana, add Anthropic+IPFS bot, Jest, lint

--- a/.env.example
+++ b/.env.example
@@ -1,69 +1,23 @@
-# ============================================
-# REQUIRED: Ollama API Configuration
-# ============================================
-# Ollama runs locally - no API key needed!
-# Default: http://localhost:11434
-OLLAMA_API_URL=http://localhost:11434
+# ========================================
+# SOCIALLY POIDH BOT - CONFIGURATION
+# ========================================
 
-# Model to use: llava (for image understanding)
-# Other options: mistral, neural-chat, etc.
-OLLAMA_MODEL=llava
+# Network (base | base-sepolia | arbitrum | arbitrum-sepolia | degen)
+NETWORK=base-sepolia
 
-# ============================================
-# Solana Network Configuration
-# ============================================
-# Options: devnet | mainnet-beta
-# Use 'devnet' for testing with free SOL
-# Use 'mainnet-beta' for production with real SOL
-SOLANA_NETWORK=devnet
+# AI Evaluation
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
-# ============================================
-# OPTIONAL: Wallet Security
-# ============================================
-# Set a password to encrypt wallet backup
-# Leave empty to skip encryption
-WALLET_PASSWORD=
+# IPFS Storage (Pinata)
+PINATA_API_KEY=your_pinata_api_key_here
+PINATA_SECRET_KEY=your_pinata_secret_key_here
 
-# ============================================
-# OPTIONAL: Bot Configuration
-# ============================================
-# Polling interval in milliseconds (default: 60000 = 1 minute)
+# Bot Configuration
+EVALUATION_THRESHOLD=70
 POLLING_INTERVAL=60000
 
-# Minimum score threshold for winning (0-100, default: 70)
-MIN_WIN_THRESHOLD=70
+# Wallet Encryption (optional but recommended)
+WALLET_PASSWORD=
 
-# ============================================
-# OPTIONAL: POIDH Indexer (real POIDH bounty/claim ingestion)
-# ============================================
-# Set these to enable fetching real bounties/claims via the POIDH Indexer REST API.
-POIDH_INDEXER_BASE_URL=
-POIDH_CHAIN_ID=
-POIDH_BOUNTY_ID=
-
-# ============================================
-# OPTIONAL: Hybrid POIDH execution mode
-# ============================================
-# indexer (default): read bounties/claims via POIDH Indexer REST API
-# evm: interact directly with POIDH EVM contracts (Base/Arbitrum/Degen)
-POIDH_MODE=indexer
-
-# ============================================
-# OPTIONAL: EVM / POIDH Contracts (only if POIDH_MODE=evm)
-# ============================================
-EVM_NETWORK=base-sepolia
-EVM_RPC_URL=
-EVM_PRIVATE_KEY=
-POIDH_EVM_CONTRACT_ADDRESS=
-
-# ============================================
-# OPTIONAL: IPFS (Pinata)
-# ============================================
-PINATA_API_KEY=
-PINATA_SECRET_KEY=
-
-# ============================================
-# OPTIONAL: Logging
-# ============================================
-# Log level: DEBUG | INFO | WARN | ERROR
-LOG_LEVEL=INFO
+# API Server (if running dashboard)
+API_PORT=3001
