--- a/.gitignore
+++ b/.gitignore
@@ -1,59 +1,48 @@
+# Dependencies
 node_modules/
+package-lock.json
+
+# Environment
 .env
 .env.local
 .env.*.local
+
+# Wallet files (CRITICAL!)
 wallet.json
 wallet.enc
 *.key
 *.pem
-/logs/
+private-key.txt
+
+# Logs
+logs/*.log
+logs/*.jsonl
 *.log
-*.jsonl
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pids
-*.pid
-*.seed
-*.pid.lock
-coverage/
-*.lcov
-.nyc_output
+
+# Build
+dist/
+build/
+web/dist/
+web/build/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
-.DS_Store
-Thumbs.db
-dist/
-build/
-.next/
-.vercel/
-*.tsbuildinfo
+
+# Testing
+coverage/
+
+# Temp
 tmp/
 temp/
 *.tmp
-test-results/
-screenshots/
-*.db
-*.sqlite
-*.sqlite3
-submissions/
+
+# Uploads
+uploads/
 downloads/
-*.backup
-*.bak
-
-# Documentation (keep repo professional)
-*.md
-!/windsurf_master_instructions.md
-!/windsurf_master_instructions (MUST PERFECT ENTIRELY).md
-!/README.md
-!/DEPLOYMENT.md
-!/BOUNTY_CLAIM.md
-
-docs/
-
-# Local reports/certificates (do not commit)
-ENTIRE_EXECUTION_REPORT.txt
-PRODUCTION_DEPLOYMENT_CERTIFICATE.txt
