--- a/package.json
+++ b/package.json
@@ -1,40 +1,39 @@
 {
-  "name": "socially-autonomous-bounty-bot",
+  "name": "socially-poidh-bot",
   "version": "1.0.0",
-  "description": "Fully autonomous AI-powered bounty bot for Socially platform",
+  "description": "Autonomous AI-powered bounty bot for poidh platform",
   "type": "module",
-  "main": "src/main.js",
-  "engines": {
-    "node": "20.x"
-  },
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/main.js",
-    "dev": "node --watch src/main.js",
-    "test": "node --test tests",
-    "setup": "node scripts/setup.js",
-    "check-balance": "node scripts/check-balance.js",
-    "worker": "node worker_server.js",
-    "worker:dev": "node --watch worker_server.js"
+    "start": "node src/index.js",
+    "dev": "node --watch src/index.js",
+    "test": "set NODE_NO_WARNINGS=1&& node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand",
+    "test:watch": "npm test -- --watch",
+    "lint": "eslint src/**/*.js",
+    "format": "prettier --write \"src/**/*.{js,json}\"",
+    "build:web": "cd web && npm run build",
+    "setup": "node scripts/setup.js"
   },
-  "keywords": [
-    "socially",
-    "poidh",
-    "bounty",
-    "autonomous",
-    "ai",
-    "solana",
-    "web3",
-    "ollama",
-    "llava"
-  ],
-  "license": "MIT",
   "dependencies": {
-    "@solana/web3.js": "^1.95.8",
+    "@anthropic-ai/sdk": "^0.32.1",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "ethers": "^6.9.0"
+    "ethers": "^6.9.0",
+    "express": "^4.18.2",
+    "form-data": "^4.0.0",
+    "ipfs-http-client": "^60.0.0",
+    "sharp": "^0.33.1",
+    "winston": "^3.11.0",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
-    "eslint": "^9.17.0"
+    "@types/jest": "^29.5.11",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.1.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
