Execute final: websocket integration, tests, coverage, docs, network config

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,26 @@
 # SOCIALLY POIDH BOT - CONFIGURATION
 # ========================================
 
-# Network (base | base-sepolia | arbitrum | arbitrum-sepolia | degen)
-NETWORK=base-sepolia
+# ========================================
+# NETWORK CONFIGURATION
+# ========================================
+
+# Choose network (required)
+# Mainnet options: base (recommended), arbitrum, degen
+# Testnet options: base-sepolia, arbitrum-sepolia
+NETWORK=base
+
+# For testnets only: Provide actual poidh contract address
+# (Leave empty for mainnet - addresses are built-in)
+POIDH_EVM_CONTRACT_ADDRESS=
+
+# ========================================
+# RECOMMENDATIONS
+# ========================================
+# - Start with NETWORK=base-sepolia for testing
+# - Get testnet ETH: https://www.alchemy.com/faucets/base-sepolia
+# - Deploy to NETWORK=base for production
+# - Base has lowest gas fees and best poidh support
 
 # AI Evaluation
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
