--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "dev": "node --watch src/index.js",
     "test": "set NODE_NO_WARNINGS=1&& node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand",
     "test:watch": "npm test -- --watch",
+    "test:unit": "set NODE_NO_WARNINGS=1&& node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand tests/unit",
+    "test:e2e": "set NODE_NO_WARNINGS=1&& node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand tests/e2e",
+    "test:coverage": "set NODE_NO_WARNINGS=1&& node --experimental-vm-modules ./node_modules/jest/bin/jest.js --runInBand --coverage",
+    "test:integration": "node scripts/test-integration.js",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write \"src/**/*.{js,json}\"",
     "build:web": "cd web && npm run build",
