Add MOCK_MODE for complete testnet demonstration

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,35 @@
+# ═══════════════════════════════════════════════════════════════════════════
+# TESTING MODE - START HERE FOR DEMO
+# ═══════════════════════════════════════════════════════════════════════════
+# Set to true for local testing without blockchain
+# Perfect for demonstrating AI evaluation + winner selection
+# NO ETH REQUIRED | NO CONTRACT ADDRESS NEEDED | NO PINATA API NEEDED
+MOCK_MODE=false
+
+# ═══════════════════════════════════════════════════════════════════════════
+# WHEN MOCK_MODE=true:
+# ═══════════════════════════════════════════════════════════════════════════
+# ✅ REAL: AI evaluation with Claude vision API (actual analysis)
+# ✅ REAL: Winner selection logic (transparent scoring)
+# ✅ REAL: Decision logging (all evaluations logged)
+# ❌ SIMULATED: Blockchain transactions (no gas fees)
+# ❌ SIMULATED: IPFS uploads (test images only)
+# ❌ SIMULATED: Bounty creation (no contract calls)
+#
+# Perfect for:
+# - Testing the complete autonomous cycle
+# - Demonstrating AI-powered evaluation
+# - Showcasing transparent winner selection
+# - Creating proof for bounty submission
+# - Zero cost testing (no ETH needed)
+#
+# To run in mock mode:
+# 1. Set MOCK_MODE=true
+# 2. Set ANTHROPIC_API_KEY (required - AI is real!)
+# 3. Run: npm start
+# 4. Watch: Bot creates bounty, generates submissions, evaluates with AI
+# ═══════════════════════════════════════════════════════════════════════════
+
 # ========================================
 # SOCIALLY POIDH BOT - CONFIGURATION
 # ========================================
